--- a/vrai_projet.Rmd
+++ b/vrai_projet.Rmd
@@ -204,7 +204,22 @@ for income in incomes:
 [1200, 0, Risk({0.4: 5000}), 'square root', 0]
 [1200, 10000, Risk({0.4: 5000}), 'linear', 0]
 [1200, 10000, Risk({0.4: 5000}), 'square root', 0]
-
+[4000, 0, Risk({0.05: 500}), 'linear', 1]
+[4000, 0, Risk({0.05: 500}), 'square root', 1]
+[4000, 10000, Risk({0.05: 500}), 'linear', 1]
+[4000, 10000, Risk({0.05: 500}), 'square root', 1]
+[4000, 0, Risk({0.05: 5000}), 'linear', 1]
+[4000, 0, Risk({0.05: 5000}), 'square root', 1]
+[4000, 10000, Risk({0.05: 5000}), 'linear', 1]
+[4000, 10000, Risk({0.05: 5000}), 'square root', 1]
+[4000, 0, Risk({0.4: 500}), 'linear', 1]
+[4000, 0, Risk({0.4: 500}), 'square root', 1]
+[4000, 10000, Risk({0.4: 500}), 'linear', 1]
+[4000, 10000, Risk({0.4: 500}), 'square root', 1]
+[4000, 0, Risk({0.4: 5000}), 'linear', 0]
+[4000, 0, Risk({0.4: 5000}), 'square root', 1]
+[4000, 10000, Risk({0.4: 5000}), 'linear', 0]
+[4000, 10000, Risk({0.4: 5000}), 'square root', 1]
 ...
 ```
 à commenter
@@ -267,7 +282,46 @@ for income in incomes:
         print(row)
 ```
 
-pas encore simmulé
+```
+[400, 0, Risk({0.2: 250, 0.1: 500, 0.01: 15000, 0.001: 100000}), 'linear', 0]
+[400, 0, Risk({0.2: 250, 0.1: 500, 0.01: 15000, 0.001: 100000}), 'square root', 0]
+[400, 10000, Risk({0.2: 250, 0.1: 500, 0.01: 15000, 0.001: 100000}), 'linear', 0]
+[400, 10000, Risk({0.2: 250, 0.1: 500, 0.01: 15000, 0.001: 100000}), 'square root', 0]
+[400, 0, Risk({0.2: 250, 0.1: 500, 0.01: 15000, 0.001: 100000}), 'linear', 0]
+[400, 0, Risk({0.2: 250, 0.1: 500, 0.01: 15000, 0.001: 100000}), 'square root', 0]
+[400, 10000, Risk({0.2: 250, 0.1: 500, 0.01: 15000, 0.001: 100000}), 'linear', 0]
+[400, 10000, Risk({0.2: 250, 0.1: 500, 0.01: 15000, 0.001: 100000}), 'square root', 0]
+[400, 0, Risk({0.2: 250, 0.1: 500, 0.01: 15000, 0.001: 100000}), 'linear', 0]
+[400, 0, Risk({0.2: 250, 0.1: 500, 0.01: 15000, 0.001: 100000}), 'square root', 0]
+[400, 10000, Risk({0.2: 250, 0.1: 500, 0.01: 15000, 0.001: 100000}), 'linear', 0]
+[400, 10000, Risk({0.2: 250, 0.1: 500, 0.01: 15000, 0.001: 100000}), 'square root', 0]
+[1200, 0, Risk({0.2: 250, 0.1: 500, 0.01: 15000, 0.001: 100000}), 'linear', 1]
+[1200, 0, Risk({0.2: 250, 0.1: 500, 0.01: 15000, 0.001: 100000}), 'square root', 1]
+[1200, 10000, Risk({0.2: 250, 0.1: 500, 0.01: 15000, 0.001: 100000}), 'linear', 1]
+[1200, 10000, Risk({0.2: 250, 0.1: 500, 0.01: 15000, 0.001: 100000}), 'square root', 1]
+[1200, 0, Risk({0.2: 250, 0.1: 500, 0.01: 15000, 0.001: 100000}), 'linear', 1]
+[1200, 0, Risk({0.2: 250, 0.1: 500, 0.01: 15000, 0.001: 100000}), 'square root', 1]
+[1200, 10000, Risk({0.2: 250, 0.1: 500, 0.01: 15000, 0.001: 100000}), 'linear', 1]
+[1200, 10000, Risk({0.2: 250, 0.1: 500, 0.01: 15000, 0.001: 100000}), 'square root', 1]
+[1200, 0, Risk({0.2: 250, 0.1: 500, 0.01: 15000, 0.001: 100000}), 'linear', 1]
+[1200, 0, Risk({0.2: 250, 0.1: 500, 0.01: 15000, 0.001: 100000}), 'square root', 1]
+[1200, 10000, Risk({0.2: 250, 0.1: 500, 0.01: 15000, 0.001: 100000}), 'linear', 1]
+[1200, 10000, Risk({0.2: 250, 0.1: 500, 0.01: 15000, 0.001: 100000}), 'square root', 1]
+[4000, 0, Risk({0.2: 250, 0.1: 500, 0.01: 15000, 0.001: 100000}), 'linear', 1]
+[4000, 0, Risk({0.2: 250, 0.1: 500, 0.01: 15000, 0.001: 100000}), 'square root', 1]
+[4000, 10000, Risk({0.2: 250, 0.1: 500, 0.01: 15000, 0.001: 100000}), 'linear', 1]
+[4000, 10000, Risk({0.2: 250, 0.1: 500, 0.01: 15000, 0.001: 100000}), 'square root', 1]
+[4000, 0, Risk({0.2: 250, 0.1: 500, 0.01: 15000, 0.001: 100000}), 'linear', 1]
+[4000, 0, Risk({0.2: 250, 0.1: 500, 0.01: 15000, 0.001: 100000}), 'square root', 1]
+[4000, 10000, Risk({0.2: 250, 0.1: 500, 0.01: 15000, 0.001: 100000}), 'linear', 1]
+[4000, 10000, Risk({0.2: 250, 0.1: 500, 0.01: 15000, 0.001: 100000}), 'square root', 1]
+[4000, 0, Risk({0.2: 250, 0.1: 500, 0.01: 15000, 0.001: 100000}), 'linear', 1]
+[4000, 0, Risk({0.2: 250, 0.1: 500, 0.01: 15000, 0.001: 100000}), 'square root', 1]
+[4000, 10000, Risk({0.2: 250, 0.1: 500, 0.01: 15000, 0.001: 100000}), 'linear', 1]
+[4000, 10000, Risk({0.2: 250, 0.1: 500, 0.01: 15000, 0.001: 100000}), 'square root', 1]
+
+```
+pas encore simulé
 
 #### Sans prime d'assurance
 risque complexe, différentes polices d'assurances disponibles, trouver les populations qui préfèrent s'autoassurer et expliquer pourquoi
